update shopee to nhakhoasv

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0;url=https://shopee.vn/nhakhoasinhvien">
+    <meta http-equiv="refresh" content="0;url=https://shopee.vn/nhakhoasv">
     <title>Document</title>
 </head>
 <body>
     <script type="text/javascript">
-        window.location.href = "https://shopee.vn/nhakhoasinhvien";
+        window.location.href = "https://shopee.vn/nhakhoasv";
     </script>
 </body>
 </html>
