--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0;url=https://shopee.vn/nhakhoasv">
-    <title>Document</title>
+    <title>Nha Khoa SV</title>
 </head>
 <body>
-    <script type="text/javascript">
-        window.location.href = "https://shopee.vn/nhakhoasv";
-    </script>
+    <iframe name="report" height="100%" width="100%" src="https://nha-khoa-sv.sapopage.com/"></iframe>
 </body>
 </html>
