--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Nha Khoa SV</title>
 </head>
 <body>
-    <iframe name="report" height="100%" width="100%" src="https://nha-khoa-sv.sapopage.com/"></iframe>
+    <iframe height="100%" width="100%" src="https://nha-khoa-sv.sapopage.com/"></iframe>
 </body>
 </html>
